fixed gap in code header

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     list-style-type: none;
 }
 
-.subtitle_link {
+.subtitle__detailed a{
     text-decoration: none;
     color: #fff;
 }
